--- a/Makefile.am
+++ b/Makefile.am
@@ -29,15 +29,13 @@ mapheaders_HEADERS = \
 
 gameheadersdir = $(includedir)/Entropy/Asteria/Game
 gameheaders_HEADERS = \
-	src/Game/Engine.hh \
 	src/Game/Application.hh
 
-engineheadersdir = $(includedir)/Entropy/Asteria/Game/Engine
-engineheaders_HEADERS = \
-	src/Game/Engine/Title.hh \
-	src/Game/Engine/New.hh \
-	src/Game/Engine/Explore.hh \
-	src/Game/Engine/Fight.hh
+modesheadersdir = $(includedir)/Entropy/Asteria/Game/Modes
+modesheaders_HEADERS = \
+	src/Game/Modes/Fight.hh \
+	src/Game/Modes/Menu.hh \
+	src/Game/Modes/World.hh
 
 lib_LTLIBRARIES = libasteria.la
 
@@ -52,11 +50,9 @@ libasteria_la_SOURCES = \
 	src/Map/Cave.cc \
 	src/Map/Object.cc \
 	src/Map/Tile.cc \
-	src/Game/Engine/Title.cc \
-	src/Game/Engine/New.cc \
-	src/Game/Engine/Explore.cc \
-	src/Game/Engine/Fight.cc \
-	src/Game/Engine.cc \
+	src/Game/Modes/Fight.cc \
+	src/Game/Modes/Menu.cc \
+	src/Game/Modes/World.cc \
 	src/Game/Application.cc
 
 bin_PROGRAMS = \
@@ -109,7 +105,6 @@ TESTSUITE = $(srcdir)/test/testsuite
 TESTSUITE_FILES = \
 	test/character.at \
 	test/map.at \
-	test/game.at \
 	test/floor.at
 
 EXTRA_DIST = \
